// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance accent 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance basic 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose accent 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-j8au9m=""
    >
      <button
        aria-label="Close tooltip"
        data-css-4up60p=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose basic 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-3ikfuq=""
    >
      <button
        aria-label="Close tooltip"
        data-css-1uhqcv0=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose short text 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-3ikfuq=""
    >
      <button
        aria-label="Close tooltip"
        data-css-1uhqcv0=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Short
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose tailPosition topRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-3ikfuq=""
    >
      <button
        aria-label="Close tooltip"
        data-css-1uhqcv0=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
      <div
        aria-hidden={true}
        data-css-4vi0t8=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomCenter 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1g17px9=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomLeft 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-15fsra9=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1ww9202=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topCenter 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-xxfcpr=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topLeft 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-3zzykz=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1y1w98q=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomCenter 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1d2693s=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomLeft 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-mya4sa=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-8n8xau=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topCenter 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-ni1fj4=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topLeft 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-14lk3e7=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-4vi0t8=""
      />
    </div>
  </div>
</div>
`;
